--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -1,3 +1,10 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+
+.required:after {
+    content: " *";
+    color: darkred;
+    font-size: 15px;
+}
