--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -14,7 +14,7 @@
 }
 
 .loader {
-    border-top-color: #3498db;
+    border-top-color: #27CBA6;
     -webkit-animation: spinner 1.5s linear infinite;
     animation: spinner 1.5s linear infinite;
 }
